--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "CC-MART",
+  "short_name": "CC-MART",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-    "src": "assets/imgs/logo.png",
+    "src": "assets/imgs/512x512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
